# Python-FastAPI

./: .coverage  .env  .gfitignore  .gitignore  README.md  database.db  old__database.db  pyproject.toml
fast_api/: app.py  database.py  models.py  settings.py
migrations/: env.py
migrations/versions/: 2ae39ba8ff61_add_updateat_into_users_table.py  87e0c27ff51c_adjust_updateat_for_auto_update_into_.py  e41f434ab741_create_users_table.py
tests/: conftest.py  test_app.py  test_models.py
